修复Vercel配置冲突：将routes替换为rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,10 @@
   "github": {
     "enabled": false
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
